--- a/index.html
+++ b/index.html
@@ -1,40 +1,33 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="The RoboSnow Team : A PLTW EDD Group">
 
-  <title>The RoboSnow Team</title>
-  <meta name="description" content="A PLTW EDD Group">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>The RoboSnow Team</title>
+  </head>
 
-</head>
+  <body>
 
-<body>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/RoboSnow">View on GitHub</a>
 
-  <div class="wrapper">
-    <header>
-      <h1 class="title">The RoboSnow Team</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">A PLTW EDD Group</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/RoboSnow" class="code">View The RoboSnow Team on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
+          <h1 id="project_title">The RoboSnow Team</h1>
+          <h2 id="project_tagline">A PLTW EDD Group</h2>
+
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
 <a id="welcome-to-robosnow" class="anchor" href="#welcome-to-robosnow" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to RoboSnow.</h3>
 
 <p>We are a PLTW EDD group from Shakopee High School. Between the three of us we have 8+ years of engineering classes; we are using this combined knowledge to create a robotic snow plow for our cap stone project.</p>
@@ -58,26 +51,27 @@
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with RoboSnow projects? Contact us at <a href="mailto:234111@shakopeeschools.org">234111@shakopeeschools.org</a> and we’ll help you sort it out! </p>
-        </article>
-      </div>
+      </section>
     </div>
-    <footer>
-      <div class="owner">
 
-      <p><a href="https://github.com/RoboSnow" class="avatar"><img src="https://avatars1.githubusercontent.com/u/10673202?v=3&amp;s=60" width="48" height="48"></a>View <a href="https://github.com/RoboSnow">RoboSnow</a> on <a href="https://www.github.com">GitHub</a></p>
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
 
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/RoboSnow/RoboSnow.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/RoboSnow/RoboSnow.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-59455367-3");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
 
-  
-</body>
+
+  </body>
 </html>
