--- a/index.html
+++ b/index.html
@@ -1,41 +1,49 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="The RoboSnow Team : A PLTW EDD Group">
+    <title>The RoboSnow Team by Yukita-Robot</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>The RoboSnow Team</title>
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/Yukita-Robot">View On GitHub</a></li>
+        </nav>
+      </div><!-- end header -->
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/RoboSnow">View on GitHub</a>
+    <div class="wrapper">
 
-          <h1 id="project_title">The RoboSnow Team</h1>
-          <h2 id="project_tagline">A PLTW EDD Group</h2>
+      <section>
+        <div id="title">
+          <h1>The RoboSnow Team</h1>
+          <p>A PLTW EDD Group</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/Yukita-Robot">Yukita-Robot</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
 
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-robosnow" class="anchor" href="#welcome-to-robosnow" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to RoboSnow.</h3>
+<a id="welcome-to-the-雪他ロボットyukita-robot" class="anchor" href="#welcome-to-the-%E9%9B%AA%E4%BB%96%E3%83%AD%E3%83%9C%E3%83%83%E3%83%88yukita-robot" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the 雪他　ロボット(Yukita Robot)</h3>
 
 <p>We are a PLTW EDD group from Shakopee High School. Between the three of us we have 8+ years of engineering classes; we are using this combined knowledge to create a robotic snow plow for our cap stone project.</p>
 
 <h3>
-<a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
+<a id="project" class="anchor" href="#project" aria-hidden="true"><span class="octicon octicon-link"></span></a>Project</h3>
 
-<p>We currently only have one active project here on GitHub and that is 雪他 (Yukita). You never know, perhaps in the future we will have some others.</p>
+<p>Our project 雪他　ロボット(Yukita Robot), or 雪他 for short, is a robotic snow plow controlled by Arduino. The end goal is to have a working robot that clears a standard two car driveway, and is safer than using a snow blower. The dream goal would be to have a marketable product or have it a functional DIY project.</p>
 
 <h3>
 <a id="current-portfolio" class="anchor" href="#current-portfolio" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current Portfolio</h3>
@@ -50,17 +58,11 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with RoboSnow projects? Contact us at <a href="mailto:234111@shakopeeschools.org">234111@shakopeeschools.org</a> and we’ll help you sort it out! </p>
+<p>Having trouble with 雪他? Contact us at <a href="mailto:234111@shakopeeschools.org">234111@shakopeeschools.org</a> and we’ll help you sort it out!</p>
       </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -71,7 +73,6 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
 
   </body>
 </html>
