--- a/index.html
+++ b/index.html
@@ -1,40 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>The RoboSnow Team by Yukita-Robot</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="description" content="The RoboSnow Team : A PLTW EDD Group">
 
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>The RoboSnow Team</title>
   </head>
+
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/Yukita-Robot">View On GitHub</a></li>
-        </nav>
-      </div><!-- end header -->
 
-    <div class="wrapper">
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/Yukita-Robot">View on GitHub</a>
 
-      <section>
-        <div id="title">
-          <h1>The RoboSnow Team</h1>
-          <p>A PLTW EDD Group</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/Yukita-Robot">Yukita-Robot</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
+          <h1 id="project_title">The RoboSnow Team</h1>
+          <h2 id="project_tagline">A PLTW EDD Group</h2>
 
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>
 <a id="welcome-to-the-雪他ロボットyukita-robot" class="anchor" href="#welcome-to-the-%E9%9B%AA%E4%BB%96%E3%83%AD%E3%83%9C%E3%83%83%E3%83%88yukita-robot" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the 雪他　ロボット(Yukita Robot)</h3>
 
@@ -56,13 +48,25 @@
 <p>We are a team of three consisting of <a href="https://github.com/exedude" class="user-mention">@exedude</a>, <a href="https://github.com/tristandoo" class="user-mention">@tristandoo</a>, and Tim Felker. Along side of us are our stakeholders and mentors that give us valuable information and guidance.</p>
 
 <h3>
+<a id="current-repositories" class="anchor" href="#current-repositories" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current Repositories</h3>
+
+<p><a href="http://yukita-robot.github.io/arduinoCode">arduinoCode</a> - All resources pertaining to the Arduino side of 雪他<br>
+<a href="http://yukita-robot.github.io/vexCode">vexCode</a> - Resources pertaining to our small scale VEX model</p>
+
+<h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with 雪他? Contact us at <a href="mailto:234111@shakopeeschools.org">234111@shakopeeschools.org</a> and we’ll help you sort it out!</p>
       </section>
-
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -73,6 +77,7 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
+
 
   </body>
 </html>
