--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="The RoboSnow Team : A PLTW EDD Group">
+    <meta name="description" content="雪他　ロボット - Yukita Robot : A PLTW EDD Group">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>The RoboSnow Team</title>
+    <title>雪他　ロボット - Yukita Robot</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/Yukita-Robot">View on GitHub</a>
 
-          <h1 id="project_title">The RoboSnow Team</h1>
+          <h1 id="project_title">雪他　ロボット - Yukita Robot</h1>
           <h2 id="project_tagline">A PLTW EDD Group</h2>
 
         </header>
