Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,32 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="雪他　ロボット - Yukita Robot : A PLTW EDD Group">
+    <title>雪他　ロボット - Yukita Robot by Yukita-Robot</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>雪他　ロボット - Yukita Robot</title>
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/Yukita-Robot">View On GitHub</a></li>
+        </nav>
+      </div><!-- end header -->
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/Yukita-Robot">View on GitHub</a>
+    <div class="wrapper">
 
-          <h1 id="project_title">雪他　ロボット - Yukita Robot</h1>
-          <h2 id="project_tagline">A PLTW EDD Group</h2>
+      <section>
+        <div id="title">
+          <h1>雪他　ロボット - Yukita Robot</h1>
+          <p>A PLTW EDD Group</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/Yukita-Robot">Yukita-Robot</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
 
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
         <h3>
 <a id="welcome-to-the-雪他ロボットyukita-robot" class="anchor" href="#welcome-to-the-%E9%9B%AA%E4%BB%96%E3%83%AD%E3%83%9C%E3%83%83%E3%83%88yukita-robot" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the 雪他　ロボット(Yukita Robot)</h3>
 
@@ -58,15 +66,9 @@
 
 <p>Having trouble with 雪他? Contact us at <a href="mailto:234111@shakopeeschools.org">234111@shakopeeschools.org</a> and we’ll help you sort it out!</p>
       </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -77,7 +79,6 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
 
   </body>
 </html>
