Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
 <p>Our portfolio is hosted on Innovation Portal and can be viewed by invite only. If you would like to see our current portfolio feel free to contact us at <a href="mailto:234111@shakopeeschools.org">234111@shakopeeschools.org</a> </p>
 
 <h2>
+<a id="images-of-yukita-building-process" class="anchor" href="#images-of-yukita-building-process" aria-hidden="true"><span class="octicon octicon-link"></span></a>Images of Yukita Building Process</h2>
+
+<p>Images of the building process can be found in our [Google drive folder].(<a href="https://drive.google.com/a/shakopeeschools.org/file/d/0B95DNDE4DBgSakFUb2s2TGlmOUE/view?usp=sharing">https://drive.google.com/a/shakopeeschools.org/file/d/0B95DNDE4DBgSakFUb2s2TGlmOUE/view?usp=sharing</a>)</p>
+
+<h2>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h2>
 
 <p>We are a team of three consisting of <a href="https://github.com/exedude" class="user-mention">@exedude</a>, <a href="https://github.com/tristandoo" class="user-mention">@tristandoo</a>, and Tim Felker. Along side of us are our stakeholders and mentors that give us valuable information and guidance.</p>
