--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <h2>
 <a id="images-of-yukita-building-process" class="anchor" href="#images-of-yukita-building-process" aria-hidden="true"><span class="octicon octicon-link"></span></a>Images of Yukita Building Process</h2>
 
-<p>Images of the building process can be found in our <a href="https://drive.google.com/a/shakopeeschools.org/file/d/0B95DNDE4DBgSakFUb2s2TGlmOUE/view?usp=sharing">Google Drive Folder.</a></p>
+<p>Images of the building process can be found in our <a href="https://drive.google.com/a/shakopeeschools.org/folderview?id=0B95DNDE4DBgSfnM1N1c1ajJ1RTdrc3Rlc3FrZGZRWWdxSjBJWnpvS1pmclpMeHRscTdhU2M&amp;usp=sharing">Google Drive Folder.</a></p>
 
 <h2>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h2>
